--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-storyblok",
+  "name": "companyname",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.23.0",
-    "next": "11.1.2",
+    "axios": "^0.24.0",
+    "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "storyblok-js-client": "^4.1.5",
     "storyblok-react": "^0.1.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/react": "17.0.30",
+    "@types/node": "16.11.6",
+    "@types/react": "17.0.33",
     "@types/styled-components": "^5.1.15",
-    "babel-plugin-styled-components": "^1.13.2",
-    "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2",
+    "babel-plugin-styled-components": "^1.13.3",
+    "eslint": "7",
+    "eslint-config-next": "12.0.1",
     "typescript": "4.4.4"
   }
 }
