--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "companyname",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "next": "12.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "storyblok-js-client": "^4.1.5",
-    "storyblok-react": "^0.1.2",
-    "styled-components": "^5.3.3"
+    "axios": "^0.27.2",
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.3",
+    "@storyblok/react": "^1.3.3"
   },
   "devDependencies": {
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.33",
+    "@types/node": "18.11.0",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^1.13.3",
-    "eslint": "7",
-    "eslint-config-next": "12.0.1",
-    "typescript": "4.4.4"
+    "eslint": "8.25.0",
+    "eslint-config-next": "^12.3.1",
+    "prettier": "2.5.1",
+    "typescript": "4.8.4"
   }
 }
