feat(core): updated the project with new precommit quality check and updated all packages

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,8 @@
   "semi": false,
   "singleQuote": true,
   "trailingComma": "all",
-  "tabWidth": 2
+  "tabWidth": 2,
+  "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
