--- a/package.json
+++ b/package.json
@@ -6,25 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "precommit": "yarn tsc --noEmit && npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
+    "@storyblok/react": "^1.3.3",
     "axios": "^0.27.2",
-    "next": "^12.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.3",
-    "@storyblok/react": "^1.3.3"
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.2",
+    "next": "13.0.2",
+    "prettier": "^2.7.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
+    "typescript": "4.8.4"
   },
   "devDependencies": {
-    "@types/node": "18.11.0",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "@types/styled-components": "^5.1.15",
-    "babel-plugin-styled-components": "^1.13.3",
-    "eslint": "8.25.0",
-    "eslint-config-next": "^12.3.1",
-    "prettier": "2.5.1",
-    "typescript": "4.8.4"
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.4.0",
+    "@types/styled-components": "^5.1.26",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
+    "husky": "^8.0.1"
   }
 }
