--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "companyname",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,25 +20,24 @@
     ]
   },
   "dependencies": {
-    "@storyblok/react": "^1.3.3",
-    "axios": "^0.27.2",
+    "@storyblok/react": "^2.0.17",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.2",
-    "next": "13.0.2",
+    "eslint-config-next": "^13.3.0",
+    "next": "^13.3.0",
     "prettier": "^2.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
-    "typescript": "4.8.4"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@trivago/prettier-plugin-sort-imports": "^3.4.0",
-    "@types/styled-components": "^5.1.26",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/styled-components": "^5.1.26",
     "husky": "^8.0.1"
   }
 }
