--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "companyname",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,24 +20,24 @@
     ]
   },
   "dependencies": {
-    "@storyblok/react": "^2.0.17",
-    "eslint": "8.26.0",
-    "eslint-config-next": "^13.3.0",
-    "next": "^13.3.0",
-    "prettier": "^2.7.1",
+    "@storyblok/react": "^2.1.4",
+    "eslint": "^8.41.0",
+    "next": "^13.4.4",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.9.4"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@trivago/prettier-plugin-sort-imports": "^3.4.0",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
+    "@types/node": "^20.2.4",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "@types/styled-components": "^5.1.26",
-    "husky": "^8.0.1"
+    "eslint-config-next": "^13.4.4",
+    "husky": "^8.0.3"
   }
 }
