--- a/package.json
+++ b/package.json
@@ -6,38 +6,50 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "TIMING=1 eslint  \"**/*.tsx*\" \"**/*.js*\" \"**/*.ts*\" --fix",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install",
-    "precommit": "yarn tsc --noEmit && npx lint-staged"
+    "precommit": "yarn typecheck && npx lint-staged"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "eslint --fix"
     ],
-    "*.md": [
+    "**/*.md": [
       "prettier --write"
     ]
   },
   "dependencies": {
-    "@storyblok/react": "^2.1.4",
-    "eslint": "^8.41.0",
-    "next": "^13.4.4",
-    "prettier": "^2.8.8",
+    "@storyblok/react": "^3.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "next": "^14.0.4",
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6",
-    "typescript": "^5.0.4"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@stylistic/eslint-plugin": "^1.5.1",
     "@trivago/prettier-plugin-sort-imports": "^3.4.0",
-    "@types/node": "^20.2.4",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "@types/styled-components": "^5.1.26",
-    "eslint-config-next": "^13.4.4",
-    "husky": "^8.0.3"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.3",
+    "postcss": "^8.4.32",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.0"
   }
 }
